add attribute api
